--- a/ProjectX/Cells/MessageBubble.xib
+++ b/ProjectX/Cells/MessageBubble.xib
@@ -30,11 +30,11 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X0S-hK-d1w" customClass="BubbleView">
-                        <rect key="frame" x="10" y="22" width="65.5" height="43"/>
+                        <rect key="frame" x="15" y="22" width="65.5" height="43"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNl-vt-ErM">
-                        <rect key="frame" x="25" y="30" width="35.5" height="25"/>
+                        <rect key="frame" x="30" y="30" width="35.5" height="25"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="IG8-6c-oNw"/>
@@ -49,13 +49,19 @@
                 <constraints>
                     <constraint firstItem="kv7-kO-f9M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="ArD-5g-l08"/>
                     <constraint firstItem="KNl-vt-ErM" firstAttribute="trailing" secondItem="X0S-hK-d1w" secondAttribute="trailing" constant="-15" id="K3f-6W-li4"/>
-                    <constraint firstItem="KNl-vt-ErM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="25" identifier="left" id="R4u-5k-0uD"/>
+                    <constraint firstItem="KNl-vt-ErM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="30" identifier="left" id="R4u-5k-0uD"/>
+                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KNl-vt-ErM" secondAttribute="trailing" constant="30" id="YsD-jv-XJP"/>
                     <constraint firstItem="KNl-vt-ErM" firstAttribute="top" secondItem="X0S-hK-d1w" secondAttribute="top" constant="8" id="dM4-kg-7IQ"/>
                     <constraint firstItem="X0S-hK-d1w" firstAttribute="top" secondItem="kv7-kO-f9M" secondAttribute="bottom" id="msO-QR-Cxx"/>
                     <constraint firstItem="kv7-kO-f9M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="pfU-Wc-e9x"/>
                     <constraint firstItem="KNl-vt-ErM" firstAttribute="leading" secondItem="X0S-hK-d1w" secondAttribute="leading" constant="15" id="rnH-q8-GMT"/>
                     <constraint firstItem="KNl-vt-ErM" firstAttribute="bottom" secondItem="X0S-hK-d1w" secondAttribute="bottom" constant="-10" id="sj8-NO-HRi"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="YsD-jv-XJP"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <accessibility key="accessibilityConfiguration">
                 <accessibilityTraits key="traits" notEnabled="YES"/>
@@ -64,7 +70,9 @@
             <connections>
                 <outlet property="bubbleLabel" destination="KNl-vt-ErM" id="4FF-a1-N9z"/>
                 <outlet property="bubbleView" destination="X0S-hK-d1w" id="D7W-ch-VmS"/>
+                <outlet property="leftConstraint" destination="R4u-5k-0uD" id="OEm-DV-WU0"/>
                 <outlet property="nameLabel" destination="kv7-kO-f9M" id="2hx-KW-g18"/>
+                <outlet property="rightConstraint" destination="YsD-jv-XJP" id="XLt-1i-PbY"/>
             </connections>
             <point key="canvasLocation" x="217.39130434782609" y="171.76339285714286"/>
         </tableViewCell>
